// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component should be able to change add custom styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#7C4908",
        "fontFamily": "Cairo-Regular",
        "fontSize": 16,
      },
      Object {
        "backgroundColor": "#000",
      },
    ]
  }
>
  Hello
</Text>
`;

exports[`Header Component should be able to change the color 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000",
        "fontFamily": "Cairo-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Header Component should be able to change the font weight 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#7C4908",
        "fontFamily": "Cairo-ExtraBold",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Header Component should be able to change the max number of lines 1`] = `
<Text
  numberOfLines={1}
  style={
    Array [
      Object {
        "color": "#000",
        "fontFamily": "Cairo-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Header Component should have mutiple variant and change the size depend on the variant 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#7C4908",
        "fontFamily": "Cairo-Bold",
        "fontSize": 30,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`Header Component should renders correctly with the default styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#7C4908",
        "fontFamily": "Cairo-Regular",
        "fontSize": 16,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;
